--- a/sass/theme/_get_involved_page.scss
+++ b/sass/theme/_get_involved_page.scss
@@ -1,5 +1,8 @@
 $max-width: 960px;
 $section-height: 720px;
+$header-font: BebasNeue;
+$header-font-light: BebasNeueLight;
+$paragraph-font: GothicA1;
 
 section.adventure {
   max-width: $max-width;
@@ -8,7 +11,7 @@ section.adventure {
   padding-top: 4rem;
 
   div.container div#adventure-header p {
-    font-family: BebasNeueLight;
+    font-family: $header-font-light;
     text-align: center;
     font-size: 56px;
     letter-spacing: 1.75px;
@@ -17,7 +20,7 @@ section.adventure {
     font-stretch: normal;
     strong {
       color: #d41c53;
-      font-family: BebasNeue;
+      font-family: $header-font;
     }
   }
 
@@ -37,14 +40,14 @@ section.steps {
   min-height: $section-height;
 
   div.steps-header {
-    font-family: BebasNeue;
+    font-family: $header-font;
     font-size: 18px;
     padding: 20px 0px;
   }
 
   div.step-tabs {
     border-bottom: 1px solid $gray-500;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 
     .nav-tabs {
       border: none;
@@ -57,7 +60,7 @@ section.steps {
       a.nav-link {
         color: $gray-600;
         border: none;
-        font-family: BebasNeue;
+        font-family: $header-font;
         font-size: 34px;
 
         &:hover {
@@ -78,12 +81,51 @@ section.steps {
       padding: 20px;
     }
   }
+
+  div.tab-content {
+    div#step-label {
+      font-family: $header-font;
+      font-size: 18px;
+      letter-spacing: 1.5px;
+      div#step-number {
+        background-color: $primary;
+        color: white;
+        text-align: center;
+        display: inline-block;
+        line-height: 1.3;
+        width: 28px;
+        height: 20px;
+        margin-right: 10px;
+      }
+    }
+
+    h2 {
+      font-size: 56px;
+      font-family: $header-font;
+      letter-spacing: 1.8px;
+      margin-top: 20px;
+    }
+
+    div#step-content {
+      font-family: $paragraph-font;
+      font-size: 16px;
+      margin-top: 15px;
+      letter-spacing: 1.5px;
+      letter-spacing: normal;
+    }
+  }
 }
 
 section.volunteer-committees {
   min-height: $section-height;
   opacity: 0.6;
   background-color: #ebeeef;
+
+  div.row div:last-child p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 section.volunteer-hero {
