--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10324,12 +10324,7 @@ section.steps {
     font-family: BebasNeue;
     font-size: 18px;
     letter-spacing: 1.5px; }
-    section.steps div.tab-content div#step-label div#step-number {
-      background-color: #D41C53;
-      color: white;
-      text-align: center;
-      display: inline-block;
-      line-height: 1.3;
+    section.steps div.tab-content div#step-label div.small-primary-bg-header {
       width: 28px;
       height: 20px;
       margin-right: 10px; }
@@ -10345,14 +10340,52 @@ section.steps {
     letter-spacing: 1.5px;
     letter-spacing: normal; }
 
+div.small-primary-bg-header {
+  background-color: #D41C53;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  line-height: 1.3;
+  font-family: BebasNeue;
+  font-size: 18px;
+  letter-spacing: 1.5px; }
+
+h2.large-header {
+  font-size: 56px;
+  font-family: BebasNeue;
+  letter-spacing: 1.8px;
+  margin-top: 20px; }
+
+div.paragraph-content {
+  font-family: GothicA1;
+  font-size: 16px;
+  margin-top: 15px;
+  letter-spacing: normal; }
+
 section.volunteer-committees {
-  min-height: 720px;
-  opacity: 0.6;
+  max-height: 720px;
   background-color: #ebeeef; }
-  section.volunteer-committees div.row div:last-child p {
+  section.volunteer-committees img.volunteer-image {
+    height: 100%;
+    object-fit: cover; }
+  section.volunteer-committees div.row div#volunteer-content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center; }
+    section.volunteer-committees div.row div#volunteer-content div#content-wrapper {
+      max-width: 60%; }
+      section.volunteer-committees div.row div#volunteer-content div#content-wrapper div.small-primary-bg-header {
+        padding: 1px 5px; }
+      section.volunteer-committees div.row div#volunteer-content div#content-wrapper a.btn {
+        border-radius: 0px;
+        margin-top: 20px;
+        color: #4a4a4a;
+        font-family: BebasNeue;
+        font-size: 24px;
+        border-width: 2px; }
+        section.volunteer-committees div.row div#volunteer-content div#content-wrapper a.btn:hover {
+          color: white; }
 
 section.volunteer-hero {
   background-image: url("../img/volunteer-today.jpg");
