--- a/sass/theme/_get_involved_page.scss
+++ b/sass/theme/_get_involved_page.scss
@@ -87,12 +87,7 @@ section.steps {
       font-family: $header-font;
       font-size: 18px;
       letter-spacing: 1.5px;
-      div#step-number {
-        background-color: $primary;
-        color: white;
-        text-align: center;
-        display: inline-block;
-        line-height: 1.3;
+      div.small-primary-bg-header {
         width: 28px;
         height: 20px;
         margin-right: 10px;
@@ -116,15 +111,65 @@ section.steps {
   }
 }
 
+div.small-primary-bg-header {
+  background-color: $primary;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  line-height: 1.3;
+  font-family: $header-font;
+  font-size: 18px;
+  letter-spacing: 1.5px;
+}
+
+h2.large-header {
+  font-size: 56px;
+  font-family: $header-font;
+  letter-spacing: 1.8px;
+  margin-top: 20px;
+}
+
+div.paragraph-content {
+  font-family: $paragraph-font;
+  font-size: 16px;
+  margin-top: 15px;
+  letter-spacing: normal;
+}
+
 section.volunteer-committees {
-  min-height: $section-height;
-  opacity: 0.6;
+  max-height: $section-height;
   background-color: #ebeeef;
 
-  div.row div:last-child p {
+  img.volunteer-image {
+    height: 100%;
+    object-fit: cover;
+  }
+
+  div.row div#volunteer-content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    div#content-wrapper {
+      max-width: 60%;
+
+      div.small-primary-bg-header {
+        padding: 1px 5px;
+      }
+
+      a.btn {
+        border-radius: 0px;
+        margin-top: 20px;
+        color: #4a4a4a;
+        font-family: $header-font;
+        font-size: 24px;
+        border-width: 2px;
+        &:hover {
+          color: white;
+        }
+      }
+    }
   }
 }
 
