--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -12,7 +12,8 @@
 
 $primary: #D41C53;
 $accent: #96C0CE;
-$lightgray: #C5C2D2;
+$lightgray: #EBEEEF;
+$midgray: #C5C2D2;
 $darkgray: #4A4A4A;
 
 $background: #FFF;
