--- a/sass/theme/_get_involved_page.scss
+++ b/sass/theme/_get_involved_page.scss
@@ -190,7 +190,7 @@ section.volunteer-hero {
 }
 
 .centered {
-  @extend %header;
+  @extend %section-header;
   text-align: center;
   position: absolute;
   top: 50%;
