--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -15,7 +15,15 @@ $container-padding: 0px !important;
   height: 600px;
   p.quote {
     font-size: 34px;
+    font-weight: bold;
     font-family: BebasNeueLight;
+    strong { color: $primary; }
+  }
+  span.author {
+    font-size: 14px;
+    font-family: GothicA1;
+    text-transform: uppercase;
+    font-weight: bold;
   }
 
 }
