--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -64,8 +64,10 @@ h2.medium-header {
     z-index: -9;
   }
   .banner-content {
-    padding-top: 15rem;
-    padding-left: 5rem;
+    margin-top: 12rem;
+  }
+  img.support-gallery-graphic {
+    height: 20%;
   }
 
 }
