--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -226,7 +226,7 @@ ul.menu {
 .entry-header .menu {
 	justify-content: center;
 	text-align: center;
-	height: 50px;
+	//height: 50px;
 	background-color: $accent;
 	align-content: center;
 	font-family: BebasNeue;
