--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -3,7 +3,6 @@ $container-padding: 0px !important;
 .current-gallery {
   // todo ask marianne: how do we best make this snap to full screen or something on mobile? setting
   // explicit pixel heights on sections feels unresponsive
-  height: 600px;
   background: #ebeeef;
   img.current-gallery-image {
     height: 100%;
@@ -40,6 +39,13 @@ h2.medium-header {
   letter-spacing: 1.8px;
 }
 
+// put this somewhere else
+h1.large-header {
+  font-size: 80px;
+  font-family: BebasNeue;
+  letter-spacing: 1.8px;
+}
+
 
 .smaller-margin-container {
   padding: $container-padding;
@@ -58,28 +64,26 @@ h2.medium-header {
     position: absolute;
     margin-left: -11%;
     background-color: $primary;
-    background-image: url('../img/top-texture.png');
+    background-image: url('../img/header-texture.png');
     transform: rotate(9.2deg);
     transform-origin: left;
     z-index: -9;
   }
+  //.banner-background::before {
+  //  opacity: 0.6;
+  //  background-image: url('../img/top-texture.png');
+  //}
   .banner-content {
     margin-top: 12rem;
   }
   img.support-gallery-graphic {
-    height: 20%;
+    height: 23%;
   }
 
 }
-.support-banner {
-  height: 640px;
-  width: 124%;
-  margin-left: -11%;
-  margin-right: -11%;
-  background-color: $primary;
-  background-image: url('../img/top-texture.png');
-  transform: rotate(7.2deg);
-  transform-origin: left;
-  bottom: -25px;
-  z-index: -3;
+
+.navbar-nav.navbar-center {
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
