--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10055,6 +10055,43 @@ section.donate {
   section.donate b {
     color: #D41C53; }
 
+/* quotes */
+.vera-quote {
+  background-color: #96C0CE; }
+  .vera-quote .background {
+    position: absolute;
+    top: -250px;
+    bottom: 0;
+    width: 100%;
+    background-color: #96C0CE;
+    z-index: -3; }
+  .vera-quote p.quote-text {
+    font-size: 34px;
+    font-weight: bold;
+    font-family: BebasNeueLight; }
+    .vera-quote p.quote-text strong {
+      font-family: BebasNeue;
+      color: #D41C53; }
+    .vera-quote p.quote-text:after {
+      content: "“";
+      position: absolute;
+      color: white;
+      opacity: .2;
+      top: -78px;
+      left: -30px;
+      font-family: GothicA1;
+      font-size: 200px; }
+  .vera-quote span.author {
+    font-size: 14px;
+    font-family: GothicA1;
+    text-transform: uppercase;
+    font-weight: bold; }
+  .vera-quote .textured {
+    background-image: url("../img/tvp-halftone-center-white.png");
+    height: 100%;
+    object-fit: cover;
+    background-size: cover; }
+
 /* Buttons */
 a.bordered-button, a.bordered-button-white {
   border-radius: 0px;
@@ -10519,18 +10556,6 @@ section.classes {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative; }
-
-.gallery-quote {
-  height: 600px; }
-  .gallery-quote p.quote-text {
-    font-size: 34px;
-    font-weight: bold;
-    font-family: BebasNeueLight; }
-  .gallery-quote span.author {
-    font-size: 14px;
-    font-family: GothicA1;
-    text-transform: uppercase;
-    font-weight: bold; }
 
 h2.medium-header {
   font-size: 48px;
