--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -554,3 +554,13 @@ div#wrapper-footer {
 		}
 	}
 }
+
+.square {
+	width: 50%;
+}
+
+.square:after {
+	content: "";
+	display: block;
+	padding-bottom: 100%;
+}
