moved blogs overview to partial-templates since its both for home and category

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10655,4 +10655,12 @@ div#wrapper-footer .site-footer {
 .blog-title {
   color: #D41C53;
   font-family: BebasNeue;
-  font-size: 34px; }
+  font-size: 26px; }
+
+a.blog-more {
+  color: #4A4A4A;
+  font-family: BebasNeue;
+  font-size: 20px;
+  text-decoration: underline;
+  text-decoration-color: #D41C53;
+  text-transform: uppercase; }
