--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -224,30 +224,36 @@ ul.menu {
 	padding: 0;
 }
 
-.entry-header .menu {
+%submenu {
 	justify-content: center;
 	text-align: center;
 	//height: 50px;
-	background-color: $accent;
+
 	align-content: center;
 	font-family: BebasNeue;
 	font-size: 18px;
 	line-height: 1;
 	letter-spacing: 1.5px;
+}
 
+%submenu-item {
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: center;
+	list-style: none;
+	padding: 0 20px;
+	height: 100%;
+}
+
+.entry-header .menu {
+	@extend %submenu;
+	background-color: $accent;
 	.menu-item {
-		display: inline-flex;
-		flex-direction: column;
-		justify-content: center;
-		list-style: none;
-		padding: 0 20px;
-		height: 100%;
-
+		@extend %submenu-item;
 		a {
 			color: $darkgray;
 		}
 	}
-
 	.menu-item.current-menu-item a {
 		color: white;
 		font-weight: lighter;
@@ -480,6 +486,7 @@ a.bordered-button-white {
 @import "get_involved_page";
 @import "classes_page";
 @import "gallery_page";
+@import "blogs_overview_page";
 
 /* Footer */
 
@@ -553,25 +560,4 @@ div#wrapper-footer {
 			padding-bottom: 5rem;
 		}
 	}
-}
-
-.square {
-	width: 100%;
-	height: 20vw;
-	object-fit: cover;
-}
-
-.blog-title {
-	color: $primary;
-	font-family: BebasNeue;
-	font-size: 26px;
-}
-
-a.blog-more {
-	color: $darkgray;
-	font-family: BebasNeue;
-	font-size: 20px;
-	text-decoration: underline;
-	text-decoration-color: $primary;
-	text-transform: uppercase;
 }
