WIP classes updates

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -37,6 +37,7 @@ body {
     background-color: $background;
     box-sizing: border-box;
     border: 1px solid black;
+    padding-right: 0px !important;
 }
 
 .site h1, h2, h3, h4, h5, h6 {
@@ -139,6 +140,11 @@ a.more:hover {
 
 .entry-header .header-texture {
 	background-image: url('../img/header-texture.png');
+}
+
+.row-block {
+	margin-left: -30px;
+	margin-right: -30px;
 }
 
 /* Navigation */
