--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9780,7 +9780,8 @@ body {
   color: #4A4A4A;
   background-color: #FFF;
   box-sizing: border-box;
-  border: 1px solid black; }
+  border: 1px solid black;
+  padding-right: 0px !important; }
 
 .site h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
@@ -9867,6 +9868,10 @@ a.more:hover {
 
 .entry-header .header-texture {
   background-image: url("../img/header-texture.png"); }
+
+.row-block {
+  margin-left: -30px;
+  margin-right: -30px; }
 
 /* Navigation */
 .navbar {
@@ -10474,7 +10479,6 @@ section.classes {
         width: 160px;
         text-align: center;
         padding-top: 10px;
-        margin-left: 40px;
         font-family: BebasNeue;
         font-size: 24px;
         font-weight: bold;
@@ -10484,6 +10488,12 @@ section.classes {
         border: 2px solid #D41C53; }
       section.classes .list-item .flex .class-register.disabled {
         color: #C5C2D2; }
+
+.modal .modal-title {
+  font-weight: bold; }
+
+.modal .modal-dialog {
+  max-width: 800px; }
 
 /* Footer */
 div#wrapper-footer div.donate-footer {
